# eclipse-iot-day-2022

./: Cargo.toml  demosteps.txt  trigger-pipeline.sh  update.sh  update_fleet.sh
application/src/: main.rs
dashboard/: Cargo.toml  index.html
dashboard/src/: dashboard.rs  fetcher.rs  firmware.rs  main.rs
firmware/: Cargo.toml
firmware/application/src/: main.rs
gateway/: run.sh  runpublish.sh
gateway/src/: board.rs  main.rs
pipeline/: microbit.yaml  simulator.yaml
simulated/: Cargo.toml  rust-toolchain.toml
